[package]
name = "multimap"
version = "0.9.1"
description = "A multimap implementation."
readme = "README.md"
repository = "https://github.com/havarnov/multimap"
license = "MIT OR Apache-2.0"
authors = ["Håvar Nøvik <havar.novik@gmail.com>"]
documentation = "https://docs.rs/multimap"
exclude = [".github/**", ".gitignore"]

[features]
serde = ["dep:serde", "hashbrown/serde"]
default = []

[dependencies]
serde = { version = "1.0", optional = true }
hashbrown = { version = "0.14" }


[dev-dependencies]
serde_test = "1.0"
